--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -14,36 +14,45 @@ title: "The Place"
 <%= image_tag 'place/tractor.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
-<h2 class="normal mt5 mb0">The Mountain</h2>
-<p class="lh-copy measure">Something about how Randy was instrumental is helping create the first sub AVA in Napa and using his plane to survey the area.</p>
+  <div class="center measure">
+    <h2 class="normal mt5 mb0">The Mountain</h2>
+    <p class="lh-copy">Something about how Randy was instrumental is helping create the first sub AVA in Napa and using his plane to survey the area.</p>
+  </div>
 </section>
 
-<%= image_tag 'place/side-hill.jpg', :class => 'w-100' %>
+<!-- <%= image_tag 'place/side-hill.jpg', :class => 'w-100' %> -->
 
+
+<%= image_tag 'place/vineyard-map.png', :class => 'w-100' %>
 <section class="mv5 mw8 center">
-  
-  <h2 class="normal mt5 mb0 tc">The Vineyards</h2>
+  <div class="center measure">
 
-<h3 class="normal mt5 mb0">Alta Tierra Vineyard</h3>
-<p class="lh-copy i measure mt0">Formerly the "Trailer Vineyard"</p>
-<p class="lh-copy measure">This was the original vineyard purchased in 1978 by Randy and Lori. . After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra". The orientation of the vineyard is basically East/West the Cabernet is grafted on rootstock 3309c with spacing between 8 and 9 x 4.5 depending on the slope.</p>
+    <h2 class="normal mt5 mb0 tc">The Vineyards</h2>
 
-<h3 class="normal mt5">Frank Vineyard</h3>
-<p class="lh-copy measure">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
+    <h3 class="normal mt5 mb0">Alta Tierra Vineyard</h3>
+    <p class="lh-copy i mt0">Formerly the "Trailer Vineyard"</p>
+    <p class="lh-copy">This was the original vineyard purchased in 1978 by Randy and Lori. . After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra". The orientation of the vineyard is basically East/West the Cabernet is grafted on rootstock 3309c with spacing between 8 and 9 x 4.5 depending on the slope.</p>
 
-<h3 class="normal mt5">Park Muscatine Vineyard</h3>
-<p class="lh-copy measure">This vineyard was purchased in 1990. The first block which we call “Cuervo” was replanted in 1991. The “JK” block was replanted in 1993, and it wasn’t until 5 years later that we replanted the block we simply call “Below House”. The fourth and final block within that vineyard was not replanted until 2016. Formerly the “Old Petite” block it was the fruit that Mike and Kara utilized to start their Retro Cellars project. Currently named the “Coyote” block. It has been planted to Cabernet Sauvignon.  Slopes and sun exposure vary along this 16 acre vineyard.</p>
+    <h3 class="normal mt5">Frank Vineyard</h3>
+    <p class="lh-copy ">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
 
-<h3 class="normal mt5">Lake Vineyard</h3>
-<p class="lh-copy measure">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
+    <h3 class="normal mt5">Park Muscatine Vineyard</h3>
+    <p class="lh-copy ">This vineyard was purchased in 1990. The first block which we call “Cuervo” was replanted in 1991. The “JK” block was replanted in 1993, and it wasn’t until 5 years later that we replanted the block we simply call “Below House”. The fourth and final block within that vineyard was not replanted until 2016. Formerly the “Old Petite” block it was the fruit that Mike and Kara utilized to start their Retro Cellars project. Currently named the “Coyote” block. It has been planted to Cabernet Sauvignon.  Slopes and sun exposure vary along this 16 acre vineyard.</p>
+
+    <h3 class="normal mt5">Lake Vineyard</h3>
+    <p class="lh-copy ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
+
+  </div>
 </section>
 
 
 <%= image_tag 'place/winery.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
-<h2 class="normal mt5 mb0">The Winery</h2>
-<p class="lh-copy measure i">Dunn’s winery sits in a fir forest high above the valley floor, a slightly scruffy compound with a ramshackle barn surrounded by agricultural equipment, outdoor fermentation tanks, and a fenced pasture with horses. The office is a former Western Union stagecoach stop. &mdash; Jay McInerney</p>
+  <div class="center measure">
+    <h2 class="normal mt5 mb0">The Winery</h2>
+    <p class="lh-copy measure i">Dunn’s winery sits in a fir forest high above the valley floor, a slightly scruffy compound with a ramshackle barn surrounded by agricultural equipment, outdoor fermentation tanks, and a fenced pasture with horses. The office is a former Western Union stagecoach stop. &mdash; Jay McInerney</p>
+  </div>
 </section>
 
 
@@ -51,16 +60,14 @@ title: "The Place"
 <%= image_tag 'place/potato-hill-pano.jpg', :class => 'w-100' %>
 
 <section class="mv5 mw8 center">
-<h2 class="normal mt5 mb0">Open Space</h2>
-<p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the Napa Valley Land Trust . This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
+  <div class="center measure">
+    <h2 class="normal mt5 mb0">Open Space</h2>
+    <p class="lh-copy measure i">Sixty three of these forested acres are entrusted to the Napa Valley Land Trust . This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
 
-<p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
+    <p class="lh-copy measure">Randy and Lori’s first donation to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank  %>  was in 2004. The Sentinel Hill property consisted of 64-acre of completely forested land as you enter the town of Angwin on Howell Mountain. The second donation, the Dunn’s gift of $5 million, was the largest donation in the history of the Land Trust. This gift was to the Napa Valley Wild Campaign to preserve and protect the Wildlake and Duff Ranches, inspiring the community to jump start the raising of more than $25 million in order to preserve and protect the 4,000 acre that make up the two ranches. This forested land is abundant in native vegetation and wildlife, and will remain so.</p>
 
-<p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+    <p class="lh-copy measure">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+  </div>
 </section>
 
 <%= image_tag 'place/drone.jpg', :class => 'w-100' %>
-<!--
-<%= image_tag 'randy.jpg', :class => 'w6' %>
-<%= image_tag 'rainbow.jpg', :class => 'w6' %>
--->
